java8 + style upd